--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>landing page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><span class="username" id="username">Peerapat Sonpong</span></h1>
-    <div class="profile">
-        <div class="notify"><p>1</p></div>
-    </div>
+    <header>
+        <h1>I'm COFFEE</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=kPa7bsKwL-c" target="_blank">My fav song!</a></li>
+            <li><a href="https://travel.kapook.com/view477.html" target="_blank">The place I want to go</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="flex-container">
+        <section class="sec" id="pe">
+            <img src="sunset.png" alt="this is COFFEE">
+            </div>
+        </section>
 
-    <div>
-        <input type="text" id="usernameInput" placeholder="Enter Username">
-        <button onclick="setUsername()">SET</button>
-    </div>
-    <div>
-        <input type="text" id="profileInput" placeholder="Enter Image URL">
-        <button onclick="setProflie()">SET</button>
-    </div>
-    <h2>Phone Number List</h2>
-    <div>
-        <input type="text" id="nameInput" placeholder="Name">
-        <input type="tel" id="phoneInput" placeholder="Tel">
-        <button onclick="addContact()">ADD</button>
-        <button onclick="exportContact()">EXPORT</button>
-    </div>
+        <sections class="sec" id="te">
+            <button><a href="lab14.html" target="_blank">click me</a></button>
+        </section>
+        </div>
+    </main>
 
-    <table id="contactTable">
-        <tr>
-            <th>No.</th>
-            <th>Name</th>
-            <th>Phone Number</th>
-        </tr>
-    </table>
-
-    <script src="sript.js"></script>
+    <footer>
+        <p>My contact : <a href="67070121@kmitl.ac.th">67070121@kmitl.ac.th</a></p>
+        <a href="https://www.facebook.com/profile.php?id=100009273792832" target="_blank">Facebook</a> |
+        <a href="https://www.instagram.com/needcoffee_more/" target="_blank">Instagram</a>
+    </footer>
 </body>
 </html>
+
